fix wrapping of name

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -274,6 +274,9 @@ li.vote, div.vote
     &.person
       line-height 125%
       font-size small
+      .login
+        overflow hidden
+        text-overflow ellipsis
       .role, .created-at
         margin-left 45px
       .role
